2009-05-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: If the
	  default ContentPresenter is replaced in a ContentControl, we
	  need to TemplateBind both the Content and ContentTemplate.

2009-04-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: If DP.Lookup
	  throws an exception while attaching a binding, catch it and
	  return false. We may actually be trying to set a clr
	  property.

2009-04-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Add a test to
	  ensure that we check DPs before using reflection to test
	  properties.

2009-04-30  Jackson Harper  <jackson@ximian.com>

	* System.Windows/DataTempalteTests.cs: Test is fixed.

2009-04-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DataTemplateTests.cs: Add test to ensure
	  DataTemplate subclasses get loaded correctly.

2009-04-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Add a test to
	  show that no work is done in the virtual OnItemsChanged
	  method to verify the change i made before.

2009-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Xml/XmlXapResolverTest.cs: New.
	* System.Xml/XmlReaderSettingsTest.cs: New.
	* System.Xml/XmlReaderTest.cs: New.
	* System.Xml/XmlResolverTest.cs: New.

2009-04-28  Larry Ewing  <lewing@novell.com>

	* System.Windows.Controls/*:
	* System.Windows/:
	* misc/DefaultValues.cs: update results.

2009-04-28  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/MiscParsing.cs: These tests work now.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/LogicalTreeTest.cs: Add LogicalParent test
	  which demonstrates an issue I've noticed while implementing
	  ComboBox.

2009-04-28  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Remove the
	  ignore because these tests are working fine now.
