@@ -1,5 +1,10 @@
 2009-05-01  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows/DependencyPropertyTest.cs: Add test for
+	  generic DPs.
+
+2009-05-01  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/ContentControlTest.cs: If the
 	  default ContentPresenter is replaced in a ContentControl, we
 	  need to TemplateBind both the Content and ContentTemplate.
